--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1"
   }
